test_regress/t/t_array_backw_index_bad.out
%Error: t/t_array_backw_index_bad.v:13: Slice selection '[1:3]' has backward indexing versus data type's '[3:0]'
      array_assign[1:3] = '{32'd4, 32'd3, 32'd2};
                  ^
%Error: t/t_array_backw_index_bad.v:14: Slice selection '[3:1]' has backward indexing versus data type's '[0:3]'
      larray_assign[3:1] = '{32'd4, 32'd3, 32'd2};
                   ^
%Error: t/t_array_backw_index_bad.v:16: Slice selection index '[4:3]' outside data type's '[3:0]'
      array_assign[4:3] = '{32'd4, 32'd3};
                  ^
%Error: t/t_array_backw_index_bad.v:17: Slice selection index '[1:-1]' outside data type's '[3:0]'
      array_assign[1:-1] = '{32'd4, 32'd3};
                  ^
%Error: t/t_array_backw_index_bad.v:17: Assignment pattern missed initializing elements: -1
      array_assign[1:-1] = '{32'd4, 32'd3};
                           ^~
%Error: Exiting due to
